update offer-cards at space page and fix align for sticky sidebar at space page

--- a/app/blocks/scroll-form/scroll-form.scss
+++ b/app/blocks/scroll-form/scroll-form.scss
@@ -14,6 +14,7 @@
     align-items: flex-start;
     padding: 35px 33px 25px;
     box-sizing: border-box;
+    background-color: $nd-color-basic-light;
 
     @include screen('xlg', max, 2) {
       padding: pxtovw(35, 1660) pxtovw(33, 1660) pxtovw(25, 1660);
