--- a/app/blocks/sidebar/sidebar.scss
+++ b/app/blocks/sidebar/sidebar.scss
@@ -88,4 +88,10 @@
       border-radius: pxtovw(3, 375);
     }
   }
+
+  .nd-content_space & {
+    background-color: transparent;
+
+    @include rule(padding-bottom, (lg: 10, md: 0));
+  }
 }
